changea after pipeline run with testdata

--- a/data_extraction_testdata/03_feature_extraction/03_1_0_calculate_IBI.ipynb
+++ b/data_extraction_testdata/03_feature_extraction/03_1_0_calculate_IBI.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "6c9db560",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "13211d13",
    "metadata": {},
    "outputs": [],
@@ -48,83 +39,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "0f9f3d2b-9219-484c-a598-6e8884c758e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('//portulab.synology.me/data/Kata/testdata/Processed_Data')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "save_data_path = Path(r'\\\\portulab.synology.me\\data\\Kata\\testdata\\Processed_Data')\n",
-    "save_data_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "617710c3-2ff8-4b7e-b8bf-3e0cb812d491",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[WindowsPath('//portulab.synology.me/data/Kata/testdata/Raw_Data/240423_f0')]"
+       "[WindowsPath('//portulab.synology.me/data/Kata/Figures_Paper/Koetter-et-al_data/Testdata/Raw_Data/240423_f0')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "master_path = Path(r'\\\\portulab.synology.me\\data\\Kata\\testdata\\Raw_Data')\n",
-    "\n",
+    "master_path = Path(Path(r'\\\\portulab.synology.me\\data\\Kata\\Figures_Paper\\Koetter-et-al_data\\Testdata') / 'Raw_Data')\n",
+    "out_path = Path(master_path/'Processed_Data')\n",
+    "save_data_path = out_path\n",
     "fish_paths = list(master_path.glob('*f[0-9]*'))\n",
-    "fish_paths"
+    "fish_paths\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "863348d3-f66a-49b8-a6d9-1945d4cc9d73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'testfish'"
+       "('240423_f0', 'testfish')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fish = 0\n",
-    "fish_path = fish_paths[fish]\n",
-    "exp_name = Path(fish_path).parts[-2] \n",
+    "fish= 0\n",
+    "fish_id =  fish_paths[fish].name\n",
     "exp_name = 'testfish'\n",
-    "exp_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c4edf923-e07d-4999-942d-94a888e9f373",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_path = Path(r'\\\\portulab.synology.me\\data\\Kata\\testdata\\Processed_Data')\n"
+    "fish_id, exp_name"
    ]
   },
   {
@@ -137,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "60f15eeb-d945-4c59-9c7b-793dfeea7060",
    "metadata": {},
    "outputs": [
@@ -146,8 +105,8 @@
      "output_type": "stream",
      "text": [
       "240423_f0\n",
-      "500\n",
-      "(499,) (500,)\n"
+      "506\n",
+      "(505,) (506,)\n"
      ]
     }
    ],
@@ -166,7 +125,6 @@
     "    # get bout starts\n",
     "    data_path = list(out_path.glob('*{}_megabouts_res.h5*'.format(fish_id)))[0]\n",
     "    data= fl.load(data_path)\n",
-    "    data = data['data']\n",
     "    \n",
     "    # get bout starts\n",
     "    data_path_2 = list(out_path.glob('*{}_bout_data.h5*'.format(fish_id)))[0]\n",
