--- a/data_extraction_testdata/04_filtering/04_3_apply_filter.ipynb
+++ b/data_extraction_testdata/04_filtering/04_3_apply_filter.ipynb
@@ -67,51 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "6fbb514f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f0'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f1'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f2'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f3'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f4'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f5'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f6'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f7'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f8'),\n",
-       "  WindowsPath('//portulab.synology.me/data/Kata/Data/14052024_visstim_2D_round/240514_f9')],\n",
-       " 10)"
+       "[WindowsPath('//portulab.synology.me/data/Kata/Figures_Paper/Koetter-et-al_data/Testdata/Raw_Data/240423_f0')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "master_path = Path(r'\\\\portulab.synology.me\\data\\Kata\\testdata\\Raw_Data')\n",
-    "\n",
+    "master_path = Path(Path(r'\\\\portulab.synology.me\\data\\Kata\\Figures_Paper\\Koetter-et-al_data\\Testdata') / 'Raw_Data')\n",
+    "out_path = Path(master_path/'Processed_Data')\n",
+    "save_data_path = out_path\n",
     "fish_paths = list(master_path.glob('*f[0-9]*'))\n",
-    "fish_paths, len(fish_paths)"
+    "fish_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "b29dbee1-a342-441e-8015-3fe504251a7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('240514_f3', '14052024_visstim_2D_round')"
+       "('testfish', '240423_f0')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,20 +110,9 @@
    "source": [
     "fish= 0\n",
     "fish_path = fish_paths[fish]\n",
-    "fish_id =  fish_paths[fish].name#[:-13]\n",
-    "exp_name = Path(fish_paths[fish]).parts[-2]\n",
+    "fish_id =  fish_paths[fish].name\n",
     "exp_name = 'testfish'\n",
     "exp_name, fish_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "ae7f7470-c0c4-4c26-b655-df4fa22eccf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_path = Path(r'\\\\portulab.synology.me\\data\\Kata\\testdata\\Processed_Data')"
    ]
   },
   {
@@ -145,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "e99b0622-a1e4-486b-8062-6f3388389580",
    "metadata": {},
    "outputs": [],
@@ -157,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "4735ab88-476c-4a66-a7b7-14994d599da8",
    "metadata": {},
    "outputs": [
@@ -165,167 +145,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                           | 0/10 [00:00<?, ?it/s]"
+      "  0%|                                                                                            | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working on fish 240514_f0\n",
-      "(192, 47) (192,)\n",
-      "192 172\n"
+      "Working on fish 240423_f0\n",
+      "(460, 37) (460,)\n",
+      "460 317\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|████████▎                                                                          | 1/10 [00:00<00:03,  2.77it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f1\n",
-      "(41, 47) (41,)\n",
-      "41 36\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|████████████████▌                                                                  | 2/10 [00:00<00:02,  3.44it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f2\n",
-      "(40, 47) (40,)\n",
-      "40 27\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|████████████████████████▉                                                          | 3/10 [00:00<00:01,  3.88it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f3\n",
-      "(147, 47) (147,)\n",
-      "147 113\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|█████████████████████████████████▏                                                 | 4/10 [00:01<00:01,  3.58it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f4\n",
-      "(272, 47) (272,)\n",
-      "272 254\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████████████████████████████████████████▌                                         | 5/10 [00:01<00:01,  3.10it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f5\n",
-      "(175, 47) (175,)\n",
-      "175 151\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|█████████████████████████████████████████████████▊                                 | 6/10 [00:01<00:01,  3.10it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f6\n",
-      "(277, 47) (277,)\n",
-      "277 245\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|██████████████████████████████████████████████████████████                         | 7/10 [00:02<00:01,  2.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f7\n",
-      "(279, 47) (279,)\n",
-      "279 240\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|██████████████████████████████████████████████████████████████████▍                | 8/10 [00:02<00:00,  2.72it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f8\n",
-      "(577, 47) (577,)\n",
-      "577 540\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|██████████████████████████████████████████████████████████████████████████▋        | 9/10 [00:03<00:00,  2.22it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fish 240514_f9\n",
-      "(509, 47) (509,)\n",
-      "509 468\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:03<00:00,  2.58it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  2.74it/s]\n"
      ]
     }
    ],
@@ -335,13 +171,13 @@
     "    print ('Working on fish {}'.format(fish_id))\n",
     "    data = fl.load(out_path/ '{}_tensor_ipsi_contra.h5'.format(fish_id))\n",
     "    tail_vectors = fl.load(out_path / '{}_tail_tensor.h5'.format(fish_id))\n",
-    "    df = pd.read_csv(Path(out_path /'{}_features_ipsi_contra.csv'.format(fish_id)))  \n",
+    "    df = pd.read_csv(Path(out_path /'{}_features.csv'.format(fish_id)))  \n",
     "    \n",
     "    tail = data[:, 0, :]\n",
     "    i_fins = data[:, 1, :]\n",
     "    c_fins = data[:, 2, :]\n",
     "\n",
-    "    good_bouts = fl.load(Path(out_path/'filtered'/\"{}_manual_filter_f.csv\".format(fish_id))) #this saves goood bouts\n",
+    "    good_bouts = fl.load(Path(out_path/\"{}_manual_filter_f.csv\".format(fish_id))) #this saves goood bouts\n",
     "    mask = good_bouts == True \n",
     "    print (df.shape, mask.shape)\n",
     "\n",
@@ -358,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "60537ede-f769-4308-92f5-403dd617d256",
    "metadata": {},
    "outputs": [
